--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <a href="#" class="nav-logo">KaLM-Embedding</a>
             <div class="nav-links">
-                <a href="https://github.com/HITsz-TMG/KaLM-Embedding" target="_blank" class="nav-link">
+                <a href="https://github.com/KaLM-Embedding" target="_blank" class="nav-link">
                     <i class="fab fa-github"></i> GitHub
                 </a>
             </div>
@@ -94,7 +94,7 @@
                     <p>A Versatile and Compact Multilingual Text Embedding Model</p>
                 </div>
                 <div class="footer-links">
-                    <a href="https://github.com/HITsz-TMG/KaLM-Embedding" target="_blank" title="GitHub">
+                    <a href="https://github.com/KaLM-Embedding" target="_blank" title="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="https://huggingface.co/collections/HIT-TMG/kalm-embedding-67316afa4c56f4fc1f58764b" target="_blank" title="Hugging Face">
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 KaLM-Embedding by HIT-TMG. All rights reserved.</p>
+                <p>&copy; 2025 KaLM-Embedding by SLAI & Tencent. All rights reserved.</p>
             </div>
         </div>
     </footer>
