--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KaLM-Embedding - Multilingual Text Embedding Models</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -22,6 +23,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
+        <div id="particles-js"></div>
         <div class="hero-content">
             <div class="logo-container">
                 <div class="logo-circle">
@@ -112,6 +114,7 @@
     <script src="content.js"></script>
     <!-- Main script for rendering and interactivity -->
     <script src="script.js"></script>
+    <script src="particles-config.js"></script>
 </body>
 </html>
 
