--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <a href="#" class="nav-logo" aria-label="KaLM-Embedding">
           <span class="wordmark wordmark--nav">
             <span class="wordmark-top">
-              <span class="wm wm-k">K</span><span class="wm wm-k">a</span
-              ><span class="wm wm-k">L</span><span class="wm wm-k">M</span
-              ><span class="wm wm-k">-</span>
+              <span class="wm wm-k">K</span><span class="wm wm-a">a</span
+              ><span class="wm wm-l">L</span><span class="wm wm-m">M</span
+              ><span class="wm wm-dash">-</span>
             </span>
             <span class="wordmark-bottom">Embedding</span>
           </span>
@@ -40,6 +40,13 @@
           >
             <i class="fab fa-github"></i> GitHub
           </a>
+          <a
+            href="https://huggingface.co/collections/KaLM-Embedding/lychee-kalm-embedding"
+            target="_blank"
+            class="nav-link"
+          >
+            <i class="fas fa-face-smile"></i> Hugging Face
+          </a>
         </div>
       </div>
     </nav>
@@ -51,11 +58,11 @@
         <h1 class="hero-title" id="hero-title">
           <span class="wordmark wordmark--hero" aria-label="KaLM-Embedding">
             <span class="wordmark-top">
-              <span class="wm wm-k">K</span><span class="wm wm-k">a</span
-              ><span class="wm wm-k">L</span><span class="wm wm-k">M</span
-              ><span class="wm wm-k">-</span>
+              <span class="wm wm-k">K</span><span class="wm wm-a">a</span
+              ><span class="wm wm-l">L</span><span class="wm wm-m">M</span
+              ><span class="wm wm-dash">-</span>
             </span>
-            <span class="wordmark-bottom">embedding</span>
+            <span class="wordmark-bottom">Embedding</span>
           </span>
         </h1>
         <p class="hero-subtitle" id="hero-subtitle"></p>
@@ -106,6 +113,21 @@
       </div>
     </section>
 
+    <!-- Survey Papers Section -->
+    <section id="surveys" class="papers survey-papers">
+      <div class="container">
+        <h2 class="section-title">Survey Papers</h2>
+        <p class="section-subtitle">
+          Summarize the core concepts, methods, and applications of Embedding
+          across modern NLP systems
+        </p>
+
+        <div class="papers-grid survey-grid" id="survey-grid">
+          <!-- Content will be rendered here by script.js -->
+        </div>
+      </div>
+    </section>
+
     <!-- Datasets Section -->
     <section class="datasets">
       <div class="container">
@@ -128,9 +150,9 @@
             <h3 aria-label="KaLM-Embedding">
               <span class="wordmark wordmark--footer">
                 <span class="wordmark-top">
-                  <span class="wm wm-k">K</span><span class="wm wm-k">a</span
-                  ><span class="wm wm-k">L</span><span class="wm wm-k">M</span
-                  ><span class="wm wm-k">-</span>
+                  <span class="wm wm-k">K</span><span class="wm wm-a">a</span
+                  ><span class="wm wm-l">L</span><span class="wm wm-m">M</span
+                  ><span class="wm wm-dash">-</span>
                 </span>
                 <span class="wordmark-bottom">Embedding</span>
               </span>
